--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,9 @@
             </intent-filter>
         </activity>
 
-    </application>
+    <service android:name="MPDService"></service>
+</application>
     <uses-sdk android:minSdkVersion="4" />
 
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
